app/assets/stylesheets/new_common/form-content.css.scss
@import "../new_variables/mixins";
@import "../new_variables/colors";
@import "../new_variables/sizes";

// Styles for the new default forms
// --------------------------------------------------

.Form {

}
.Form-title {
  display: block;
  margin: $sMargin-section 0;
  width: 460px;
}
.Form-titleText {
  font-size: $sFontSize-large;
  font-weight: $sFontWeight-lighter;
  color: $cTypography-paragraphs;
  line-height: $sLineHeight-large;
}
.Form-list {
  padding: 0 0 20px 160px;
  color: $cTypography-paragraphs;
  list-style-type: disc;
}
.Form-listItem {
  font-size: 14px;
  font-weight: $sFontWeight-lighter;
  color: $cTypography-paragraphs;
}
.Form-row {
  @include display-flex();
  @include justify-content(flex-start, start);
  padding: 10px 0;
}
.Form-row.Form-row--centered {
  @include justify-content(center, center);
  margin-left: -140px;
}
.Form-row.Form-row--spaced { padding: $sMargin-element 0 }
.Form-rowLabel {
  width: 140px;
  margin-right: $sMargin-element;
  text-align: right;
}
.Form-label {
  line-height: 40px;
  font-size: $sFontSize-normal;
  font-weight: $sFontWeight-normal;
  @include nicer-lato-typography();
  color: $cTypography-paragraphs;
}
.Form-rowPreview {
  width: 735px;
}
.Form-separator {
  position: relative;
  display: block;
  height: 1px;
  width: 100%;
  padding: $sMargin-element 0;
  z-index: 0;
  background: transparent;
  &:before {
    content: '';
    position: absolute;
    top: $sMargin-element;
    left: 0;
    right: 0;
    width: 100%;
    height: 1px;
    background: $cStructure-mainLine;
  }
}
.Form-separator.Form-separator--or {
  position: relative;
  display: block;
  height: auto;
  text-align: center;
  margin: 0;
  background: transparent;
  font-size: 14px;
  font-weight: $sFontWeight-lighter;
  color: $cTypography-secondary;

  &:before, &:after {
    content: '';
    position: absolute;
    top: $sMargin-element + 10;
    height: 1px;
    background: $cStructure-mainLine;
    width: 45%;
  }
  &:before { left: 0 }
  &:after { right: 0 }
}
.Form-rowData {
  position: relative;
  @include display-flex();
  @include justify-content(space-between, justify);
  @include align-items(center, center);
  width: 380px;
  margin-right: $sMargin-element;
}
// RowData sizes
.Form-rowData--longer { width: 460px }
.Form-rowData--long { width: 380px }
.Form-rowData--med { width: 300px }
.Form-rowData--short { }

.Form-input {
  position: relative;
  height: 38px;
  padding: 0 12px;
  outline: none;
  border: 1px solid #CCC;
  border-radius: 4px;
  z-index: 2;

  &:focus { border-color: #999 }
}
.Form-input.Form-input--error { border-color: rgba(#DD3B37,0.6) }
.Form-input.Form-input--error:focus,
.Form-input.Form-input--error:hover { border-color: rgba(#DD3B37,1) }

.Form-input::-webkit-input-placeholder { font-style: italic; color: #AAA }
.Form-input:-moz-placeholder           { font-style: italic; color: #AAA }
.Form-input::-moz-placeholder          { font-style: italic; color: #AAA }
.Form-input:-ms-input-placeholder      { font-style: italic; color: #AAA }

// Sizes
.Form-input--longer { width: 434px }
.Form-input--long { width: 354px }
.Form-input--med { width: 274px }
.Form-input--short { width: 114px }
// Types
.Form-input.has-icon {
  padding: 0 42px 0 12px;

  &.Form-input--longer { width: 414px }
  &.Form-input--long { width: 324px }
  &.Form-input--med {}
  &.Form-input--short {}
}
.Form-input.has-submit {
  padding: 0 95px 0 12px;

  &.Form-input--longer { width: 351px }
  &.Form-input--long { width: 297px }
  &.Form-input--med {}
  &.Form-input--short {}
}
.Form-inputSubmit {
  position: absolute;
  top: 6px;
  right: 5px;
  height: 28px;
  padding: 0 18px;
  background: none;
  z-index: 1;
}
.Form-inputIcon {
  position: absolute;
  right: 14px;
  top: 12px;
  z-index: 3;
  font-size: $sFontSize-larger;
  color: $cTypography-help;
}
.Form-inputError {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  height: 38px;
  padding: 0 12px;
  z-index: 1;
  border: 1px solid #CCC;
  line-height: 38px;
  background: #FFF4F4;
  color: $cHighlight-negative;
  font-size: $sFontSize-normal;
  border-radius: 4px;
  @include transition(top, 200ms, ease-in-out);
}
.Form-inputError.is-visible {
  top: 36px;
}
.Form-input.is-disabled { background: $cStructure-grayBkg }
.Form-textarea {
  padding: 12px;
  min-height: 110px;
  max-height: 110px;
}
.Form-copyIcon {
  top: 10px;
  right: 12px;
  font-size: $sFontSize-largest;
}
.Form-copyIcon.hover { color: $cTypography-paragraphs }
.Form-text--preview {
  font-size: $sFontSize-normal;
  @include nicer-lato-typography();
  color: $cTypography-secondary;
  line-height: $sLineHeight-large;
}
.Form-avatar {

}
.Form-avatarPreview {
  position: relative;
  width: 100px;
  height: 100px;
  background: $cStructure-grayBkg;
  border: 1px solid $cTypography-help;
  border-radius: 4px;
  overflow: hidden;
}
.Form-avatarPreviewImage {
  position: relative;
  max-width: 100px;
  border-radius: 4px;
  background: $cStructure-grayBkg;
}
.Form-avatarPreviewLoader {
  position: absolute;
  top: 0;
  left: 0;
  width: 100px;
  height: 100px;
  background: rgba(black, 0.4);
  border-radius: 4px;
  z-index: 2;
}
.Spinner.Form-avatarPreviewSpinner {
  position: absolute;
  top: 50%;
  left: 50%;
  margin: -20px 0 0 -20px;
  z-index: 1;
}
.Form-avatar .input-group {
  position: absolute;
  top: 10px;
  left: 120px;
}
.Form-avatar .form-control {
  position: absolute;
  top: 0;
  left: 0;
  width: 250px;
  border: none;
  color: $cTypography-secondary;
  display: none;
}
.Form-avatar .btn {
  position: absolute;
  top: 0;
  left: 0;
  width: 85px;
  color: $cTypography-link;
  &:hover {
    cursor: pointer;
    text-decoration: underline;
    color: $cTypography-linkHover;
  }
}
.Form-avatar .btn[disabled] {
  color: $cTypography-help;
  &:hover {
    cursor: default;
    text-decoration: none;
    color: $cTypography-help;
  }
}
.Form-link {
  color: $cTypography-link;
  text-decoration: underline;
  &:hover {
    color: $cTypography-linkHover;
    cursor: pointer;
  }
}
.Form-link.is-disabled {
  color: $cTypography-help;
  text-decoration: none;
  &:hover {
    color: $cTypography-help;
    cursor: default;
  }
}
.Form-file {
  &:hover .Button--main { background: #007fbd }
  &:hover .Button--negative { background-color: rgba(#B93F37, 1) }
}
.Form-file input[type="file"] {
  position: absolute;
  top: 0;
  left: -118px;
  margin: 0;
  border: solid transparent;
  border-width: 1px 0 24px 0;
  opacity: 0;
  filter: alpha(opacity=0);
  -moz-transform: translate(26px, 0) scale(1);
  direction: ltr;
  cursor: pointer;
}
.Form-fileLabel {
  width: 300px;
  color: $cTypography-secondary;
  font-size: $sFontSize-normal;
}
.Form-fileLabel--error {
  display: none;
  color: $cHighlight-negative;
}
.Form .dz-preview { display: none }
.Form-fileDropzone {
  position: absolute;
  display: none;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  border: 2px dashed $cStructure-mainLine;
  background: $cStructure-grayBkg;
  border-radius: 4px;
  line-height: 38px;
  text-align: center;
  color: $cTypography-secondary;
  font-size: $sFontSize-large;
  z-index: 1;
}
.Form-rowInfo {
  @include display-flex();
  line-height: 40px;
  max-width: 380px;
}
.Form-rowInfoText {
  font-size: $sFontSize-normal;
  color: $cTypography-help;
}
.Form-rowInfoText--centered { text-align: center }
.Form-rowInfoText--smaller { font-size: $sFontSize-smallUpperCase }
.Form-rowInfoText--block { width: 100% }
.Form-rowInfoText--multipleLines {
  line-height: 20px;
}
.Form-rowInfoText--error { color: #DD3B37 }
.Form-footer {
  @include display-flex();
  @include justify-content(space-between, justify);
  @include align-items(center, center);
  margin: $sMargin-formRow 0;
  padding: $sMargin-formRow 0;
  border-top: 1px solid $cStructure-mainLine;
}
.Form-footerText {
  font-size: $sFontSize-large;
  font-weight: $sFontWeight-lighter;
  color: $cTypography-secondary;
}
.Form-footerIcon {
  width: 20px;
  height: 20px;
  margin-right: 8px;
  border: 1px solid #F2C000;
  border-radius: 20px;
  background: #F6D35C;
  line-height: $sLineHeight-normal!important;
  font-size: $sFontSize-normal;
  color: white;
  text-align: center;
}

